--- a/styles/project.css
+++ b/styles/project.css
@@ -2,13 +2,45 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'DM Sans';
-}
-
-.all {
-    margin: 0 15em 0 15em;
-    
+    color: #5C2483;
 }
 
 .intro {
     background-color: #E7F3E9;
+
+    p, h1, img {
+        margin: 0 15em 0 15em;
+
+    }
+}
+
+.organisation {
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: row;
+
+    .left, .right {
+        margin: 0 15em 0 15em;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+    }
+
+    .right {
+        margin-top: 10em;
+    }
+
+    .left {
+        margin-bottom: 10em;
+    }
+
+    .number {
+        color : #1DAC9B
+    }
+}
+
+.title {
+    display: flex;
+    flex-direction: row;
 }
