--- a/styles/contact.css
+++ b/styles/contact.css
@@ -16,7 +16,7 @@ fieldset {
     border: none;
 }
 
-label  {
+label {
     text-align: center;
     margin-bottom: 1em;
     color: #5c2483;
@@ -31,8 +31,8 @@ input {
     color: black;
     padding-left: 1em;
     font-family: 'DM Sans';
-    margin: 0 auto; 
-}   
+    margin: 0 auto;
+}
 
 textarea {
     min-width: 20em;
@@ -41,14 +41,19 @@ textarea {
     min-height: 5em;
     max-height: 30em;
     height: 10em;
-    border-radius: 1em; 
+    border-radius: 1em;
     padding-left: 2em;
     padding-right: 2em;
     background-color: #e0d1ee;
     color: black;
     font-family: 'DM Sans';
-    margin: 0 auto; 
+    margin: 0 auto;
     text-align: center;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
 }
 
 button {
@@ -61,8 +66,8 @@ button {
     border-radius: 2em;
     padding-left: 2em;
     padding-right: 2em;
-    margin-left: 50em;
     margin-top: 2em;
+    margin-left: 2em;
 }
 
 button:hover {
@@ -73,4 +78,35 @@ figure {
     display: flex;
     justify-content: center;
     object-fit: cover;
+}
+
+@media (max-width: 500px) {
+    main {
+        margin-left: 2em;
+        margin-right: 2em;
+    }
+
+    figure {
+        height: 10em;
+    }
+
+    .button-container {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media (width: 344px) {
+    fieldset:nth-of-type(3) {
+        margin-left: -2em;
+    }
+
+    fieldset:nth-of-type(1), fieldset:nth-of-type(2) {
+        margin-left: -1em;
+    }
+
+    .button-container {
+        display: flex;
+        flex-direction: column;
+    }
 }
