--- a/styles/template.css
+++ b/styles/template.css
@@ -10,9 +10,10 @@ header {
     align-items: center;
     justify-content: flex-end;
     height: 3.3em;
-    background-color: #E7F3E9;
     padding: 20px;
     gap: 20px;
+    /* box-shadow: rgba(0, 0, 0, 0.45) 25px 25px 25px -25px; */
+    box-shadow: 0px 34px 15px -30px rgba(0, 0, 0, 0.1);
 }
 
 .logo {
@@ -30,12 +31,20 @@ header {
 }
 
 .header {
-    font-size: 0.5em;
+    font-size: 1.5em;
     background-color: transparent;
     width: 110px;
     height: 60px;
     border: none;
     font-family: 'DM Sans';
+    color: #5C2483;
+    text-align: center;
+    justify-content: center;
+
+}
+
+.header:hover{
+    border-bottom: 3px solid #5C2483;
 
 }
 
@@ -56,7 +65,6 @@ header {
         align-items: center;
         justify-content: flex-end;
         height: 3.3em;
-        background-color: #E7F3E9;
         padding: 20px;
         gap: 20px;
     }
@@ -77,7 +85,6 @@ header {
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        background-color: #E7F3E9;
     }
 
     header {
