--- a/styles/project.css
+++ b/styles/project.css
@@ -46,6 +46,7 @@ body {
         flex-direction: row;
         align-items: center;
         justify-content: space-around;
+        font-weight: bold;
     }
 }
 
