--- a/styles/template.css
+++ b/styles/template.css
@@ -141,6 +141,6 @@ header {
 footer {
     margin-top: 10em;
     align-items: flex-end;
-    background-color: red;
+    background-color: #E7F3E9;
     height: 8em;
 }
