--- a/styles/template.css
+++ b/styles/template.css
@@ -25,7 +25,7 @@ header {
 
 .logo img {
     display: block;
-    width: 100%;
+    width: 50%;
     height: auto;
     left: 0em;
 }
@@ -139,8 +139,56 @@ header {
 
 
 footer {
-    margin-top: 10em;
-    align-items: flex-end;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20em;
     background-color: #E7F3E9;
-    height: 8em;
+    height: 40em;
+    padding: 0.2em;
+
+    h4{
+        color: #5C2483;
+        font-size: 2.5em;
+        text-align: center;
+    }
+    p{
+        color: #5C2483;
+        font-size: 2em;
+        text-align: center;
+    }
+    button{
+        width: 10em;
+        height: 2.5em;
+        background-color: #1DAC9B;
+        border-radius: 100px;
+        border: none;
+        color: white;
+        font-size: 37px;
+    }
+    #donButton:hover{
+        background-color: #E7F3E9;
+        color: #1DAC9B;
+        border: #1DAC9B 1px solid;
+    }
+    a{
+        text-decoration: none;
+        font-style: normal;
+    }
+    
+    .logo-footer{
+        display: flex;
+        flex-direction: row;
+        align-items: baseline;
+        justify-content: flex-start;
+        margin-top: 2em;
+        p{
+        font-size: 1.2em;
+
+        }
+        img{
+            width: 7em;
+
+        }
+    }
 }
