--- a/styles/template.css
+++ b/styles/template.css
@@ -17,8 +17,7 @@ header {
     height: 3.3em;
     padding: 20px;
     gap: 20px;
-    /* box-shadow: rgba(0, 0, 0, 0.45) 25px 25px 25px -25px; */
-    box-shadow: 0px 34px 15px -30px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 8px -2px 8px 8px rgb(0 0 0 / 6%);
 }
 
 .logo {
